--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -51,6 +51,8 @@
 @import 'layout/forms';
 @import 'layout/slideshow';
 @import 'layout/sidebar-left';
+@import "layout/thongbao";
+@import "layout/search";
 
 @import 'pages/home';
 @import 'pages/about';
