--- a/scss/components/_background.scss
+++ b/scss/components/_background.scss
@@ -10,3 +10,15 @@
 .background-F0F0F0 {
   background: #F0F0F0;
 }
+.background-E8F6E1{
+  background: #E8F6E1;
+}
+.background-E9F9FD{
+  background: #E9F9FD;
+}
+.background-EDEBFC{
+  background: #EDEBFC;
+}
+.background-064EFA{
+  background: #064EFA;
+}
