--- a/scss/components/_row-gap.scss
+++ b/scss/components/_row-gap.scss
@@ -1,3 +1,13 @@
+.row-gap-16 {
+  &.uk-grid-margin{
+    margin-top: 16px;
+  }
+  >*{
+    &.uk-grid-margin{
+      margin-top: 16px;
+    }
+  }
+}
 .row-gap-20 {
   &.uk-grid-margin{
     margin-top: 20px;
