--- a/scss/components/_items.scss
+++ b/scss/components/_items.scss
@@ -1,5 +1,5 @@
 $j:
-4px,6px,7px,8px,9px,12px,15px,16px,22px,24px,28px,32px,34px,50px,
+2px,4px,6px,7px,8px,9px,12px,15px,16px,22px,24px,28px,32px,34px,50px,
 100px;
 @each $i in $j {
   .item-#{$i}{
