--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -73,6 +73,7 @@
 @import "pages/khongdusodu-vi";
 @import "pages/chitietdonhang";
 @import "pages/404";
+@import "pages/danhmucsach";
 
 @import 'themes/theme';
 @import 'themes/admin';
