--- a/scss/components/_line-height.scss
+++ b/scss/components/_line-height.scss
@@ -13,6 +13,9 @@
 .line-height-126 {
   line-height: 1.26;
 }
+.line-height-127 {
+  line-height: 1.27;
+}
 .line-height-128 {
   line-height: 1.28;
 }
