--- a/scss/components/_pagination.scss
+++ b/scss/components/_pagination.scss
@@ -21,7 +21,7 @@
     &:hover,
     &.uk-active{
       >*{
-        color: #966412;
+        color: #fff;
         background: var(--brand-color);
       }
     }
