--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -74,6 +74,7 @@
 @import "pages/chitietdonhang";
 @import "pages/404";
 @import "pages/danhmucsach";
+@import "pages/tintuc";
 
 @import 'themes/theme';
 @import 'themes/admin';
