--- a/style.css
+++ b/style.css
@@ -938,6 +938,64 @@
 }
 
 @media (min-width: 1600px) {
+  .uk-grid-36-xl {
+    margin-left: -36px !important;
+  }
+  .uk-grid-36-xl > * {
+    padding-left: 36px !important;
+  }
+  .uk-grid-36-xl > .uk-grid-margin {
+    margin-top: 36px !important;
+  }
+}
+
+@media (min-width: 1200px) {
+  .uk-grid-36-l {
+    margin-left: -36px !important;
+  }
+  .uk-grid-36-l > * {
+    padding-left: 36px !important;
+  }
+  .uk-grid-36-l > .uk-grid-margin {
+    margin-top: 36px !important;
+  }
+}
+
+@media (min-width: 960px) {
+  .uk-grid-36-m {
+    margin-left: -36px !important;
+  }
+  .uk-grid-36-m > * {
+    padding-left: 36px !important;
+  }
+  .uk-grid-36-m > .uk-grid-margin {
+    margin-top: 36px !important;
+  }
+}
+
+@media (min-width: 640px) {
+  .uk-grid-36-s {
+    margin-left: -36px !important;
+  }
+  .uk-grid-36-s > * {
+    padding-left: 36px !important;
+  }
+  .uk-grid-36-s > .uk-grid-margin {
+    margin-top: 36px !important;
+  }
+}
+
+.uk-grid-36 {
+  margin-left: -36px;
+}
+.uk-grid-36 > * {
+  padding-left: 36px;
+}
+.uk-grid-36 > .uk-grid-margin {
+  margin-top: 36px;
+}
+
+@media (min-width: 1600px) {
   .uk-grid-40-xl {
     margin-left: -40px !important;
   }
@@ -3320,6 +3378,18 @@
 }
 .danhmucsach__search__input:not(:focus) {
   border-color: #f6f6f6;
+}
+
+.tintuc__card {
+  padding: 20px;
+  border: 1px solid var(--Divider, #EBE9E3);
+}
+.tintuc__sidebar__item {
+  padding-top: 16px;
+  border-top: 1px solid var(--Divider, #EBE9E3);
+}
+.tintuc__sidebar__item:nth-child(n+2) {
+  margin-top: 16px;
 }
 
 /*# sourceMappingURL=style.css.map */
