--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -75,6 +75,7 @@
 @import "pages/404";
 @import "pages/danhmucsach";
 @import "pages/tintuc";
+@import "pages/danhsachtacgia";
 
 @import 'themes/theme';
 @import 'themes/admin';
