--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -76,6 +76,7 @@
 @import "pages/danhmucsach";
 @import "pages/tintuc";
 @import "pages/danhsachtacgia";
+@import "pages/chitiettacgia";
 
 @import 'themes/theme';
 @import 'themes/admin';
