--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -173,6 +173,9 @@
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24' fill='none'%3E%3Cpath d='M19 18.5L22.5 22M21.5 11.5C21.5 6.25329 17.2467 2 12 2C6.75329 2 2.5 6.25329 2.5 11.5C2.5 16.7467 6.75329 21 12 21C17.2467 21 21.5 16.7467 21.5 11.5Z' stroke='black' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
   }
 
+  // Chi tiet tac gia
+
+
   // Thông tin tài khoản
   &--user1{
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24' fill='none'%3E%3Cpath d='M18.801 18.9281L19.4215 18.5607C20.7077 17.799 21.5 16.3914 21.5 14.8681V9.13192C21.5 7.6086 20.7077 6.20099 19.4215 5.43932L14.5785 2.57125C13.2923 1.80958 11.7077 1.80958 10.4215 2.57125L5.57846 5.43932C4.2923 6.20099 3.5 7.6086 3.5 9.13192V14.8681C3.5 16.3914 4.2923 17.799 5.57846 18.5607L6.19896 18.9281M18.801 18.9281L14.5785 21.4288C13.2923 22.1904 11.7077 22.1904 10.4215 21.4288L6.19896 18.9281M18.801 18.9281C17.5431 16.6982 15.1924 15.1979 12.5 15.1979C9.80762 15.1979 7.45686 16.6982 6.19896 18.9281' stroke='%2328303F' stroke-width='1.5' stroke-linejoin='round'/%3E%3Ccircle cx='3' cy='3' r='3' transform='matrix(1 0 0 -1 9.5 12)' stroke='%2328303F' stroke-width='1.5' stroke-linejoin='round'/%3E%3C/svg%3E");
