--- a/scss/pages/_sachdamua.scss
+++ b/scss/pages/_sachdamua.scss
@@ -80,6 +80,7 @@
         &.uk-active{
           >a{
             background-color: #F6F6F6;
+            @extend .text-966412;
           }
         }
       }
