--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -77,6 +77,7 @@
 @import "pages/tintuc";
 @import "pages/danhsachtacgia";
 @import "pages/chitiettacgia";
+@import "pages/nxb";
 
 @import 'themes/theme';
 @import 'themes/admin';
