feat: page chitietnxb

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -78,6 +78,7 @@
 @import "pages/danhsachtacgia";
 @import "pages/chitiettacgia";
 @import "pages/nxb";
+@import "pages/chitietnxb";
 
 @import 'themes/theme';
 @import 'themes/admin';
