--- a/scss/pages/_sachdamua.scss
+++ b/scss/pages/_sachdamua.scss
@@ -21,7 +21,7 @@
   &__btn{
     align-items: center;
     justify-content: center;
-    display: flex;
+    display: inline-flex;
     padding: 0 24px;
     text-transform: inherit;
     background: var(--brand-color);
