--- a/style.css
+++ b/style.css
@@ -1581,6 +1581,11 @@
   }
 }
 
+.width-104px {
+  max-width: 100%;
+  width: 104px;
+}
+
 .width-124px {
   max-width: 100%;
   width: 124px;
@@ -2419,6 +2424,9 @@
 .icon24--search {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24' fill='none'%3E%3Cpath d='M19 18.5L22.5 22M21.5 11.5C21.5 6.25329 17.2467 2 12 2C6.75329 2 2.5 6.25329 2.5 11.5C2.5 16.7467 6.75329 21 12 21C17.2467 21 21.5 16.7467 21.5 11.5Z' stroke='black' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 }
+.icon24--edit {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M3 21H21M13.7844 5.31171C13.7844 5.31171 13.7844 6.94634 15.419 8.58096C17.0537 10.2156 18.6883 10.2156 18.6883 10.2156M7.31963 17.9881L10.7523 17.4977C11.2475 17.4269 11.7064 17.1975 12.06 16.8438L20.3229 8.58096C21.2257 7.67818 21.2257 6.21449 20.3229 5.31171L18.6883 3.67708C17.7855 2.77431 16.3218 2.77431 15.419 3.67708L7.15616 11.94C6.80248 12.2936 6.57305 12.7525 6.50231 13.2477L6.01193 16.6804C5.90295 17.4432 6.5568 18.097 7.31963 17.9881Z' stroke='%23fff' stroke-width='1.5' stroke-linecap='round'/%3E%3C/svg%3E");
+}
 .icon24--user1 {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='24' viewBox='0 0 25 24' fill='none'%3E%3Cpath d='M18.801 18.9281L19.4215 18.5607C20.7077 17.799 21.5 16.3914 21.5 14.8681V9.13192C21.5 7.6086 20.7077 6.20099 19.4215 5.43932L14.5785 2.57125C13.2923 1.80958 11.7077 1.80958 10.4215 2.57125L5.57846 5.43932C4.2923 6.20099 3.5 7.6086 3.5 9.13192V14.8681C3.5 16.3914 4.2923 17.799 5.57846 18.5607L6.19896 18.9281M18.801 18.9281L14.5785 21.4288C13.2923 22.1904 11.7077 22.1904 10.4215 21.4288L6.19896 18.9281M18.801 18.9281C17.5431 16.6982 15.1924 15.1979 12.5 15.1979C9.80762 15.1979 7.45686 16.6982 6.19896 18.9281' stroke='%2328303F' stroke-width='1.5' stroke-linejoin='round'/%3E%3Ccircle cx='3' cy='3' r='3' transform='matrix(1 0 0 -1 9.5 12)' stroke='%2328303F' stroke-width='1.5' stroke-linejoin='round'/%3E%3C/svg%3E");
 }
@@ -3073,6 +3081,14 @@
   background-size: 85%;
 }
 
+.chi_tiet_sach__comment__item {
+  padding: 12px;
+  border: 1px solid #E6E6E6;
+}
+.chi_tiet_sach__comment__textarea {
+  border: 1px solid #F6F6F6;
+  background: #F6F6F6;
+}
 .chi_tiet_sach__navbar {
   background: #FFF;
   box-shadow: 0px -10px 30px 0px rgba(0, 0, 0, 0.1);
@@ -3219,7 +3235,7 @@
 .sachdamua__btn {
   align-items: center;
   justify-content: center;
-  display: flex;
+  display: inline-flex;
   padding: 0 24px;
   text-transform: inherit;
   background: var(--brand-color);
