feat: page tailieu

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -42,6 +42,7 @@
 @import 'components/gap';
 @import 'components/cursor';
 @import 'components/background';
+@import "components/padding";
 
 @import 'layout/navigation';
 @import 'layout/grid';
@@ -79,6 +80,7 @@
 @import "pages/chitiettacgia";
 @import "pages/nxb";
 @import "pages/chitietnxb";
+@import "pages/tailieu";
 
 @import 'themes/theme';
 @import 'themes/admin';
