--- a/scss/components/_margin.scss
+++ b/scss/components/_margin.scss
@@ -1,3 +1,15 @@
+$sizes:(
+        '16': 16px,
+);
+@each $name,$value in $sizes {
+  .mb-#{$name} {
+    margin-bottom: $value;
+  }
+}
+
+
+
+
 ////=====================================================
 //// Custom Margin Bottom
 ////=====================================================
