--- a/scss/components/_text.scss
+++ b/scss/components/_text.scss
@@ -91,3 +91,47 @@ $j: 1,2,3,4,5;
 .text-FFD448{
   color: #FFD448;
 }
+
+$colors: (
+        '000': #000,
+        '14081C': #14081C,
+        '514957': #514957,
+        '0C121C': #0C121C,
+        '0D1017': #0D1017,
+        '181C32': #181C32,
+        '444241': #444241,
+        'A1A1A1': #A1A1A1,
+        'C9CDD2': #C9CDD2,
+        '444': #444,
+        '999': #999,
+        'FFF': #FFF,
+        'F65D4E': #F65D4E,
+        'FF0441': #FF0441,
+        'D83A40': #D83A40,
+        '966412': #966412,
+        '04C5BA': #04C5BA,
+        '0CB0A7': #0CB0A7,
+        '50CD89': #50CD89,
+        '72C949': #72C949,
+        '9A96AA': #9A96AA,
+        '4B5563': #4B5563,
+        '2A2928': #2A2928,
+        '5E5D5A': #5E5D5A,
+        'F1416C': #F1416C,
+        '3F4254': #3F4254,
+        '28303F': #28303F,
+        '6B6B6B': #6B6B6B,
+        '111827': #111827,
+        '45484F': #45484F,
+        'EB4143': #EB4143,
+        '61646B': #61646B,
+        'FFD448': #FFD448,
+        '4F4950': #4F4950,
+        '911D21': #911D21,
+        'BB252B': #BB252B,
+);
+@each $name,$value in $colors {
+  .text-#{$name} {
+    color: rgba($value, 1);
+  }
+}
