feat: page chitiettailieu

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -81,6 +81,7 @@
 @import "pages/nxb";
 @import "pages/chitietnxb";
 @import "pages/tailieu";
+@import "pages/chitiettailieu";
 
 @import 'themes/theme';
 @import 'themes/admin';
