--- a/scss/components/_padding.scss
+++ b/scss/components/_padding.scss
@@ -1,4 +1,5 @@
 $sizes:(
+        '10': 10px,
         '12': 12px,
         '16': 16px,
         '20': 20px,
@@ -16,6 +17,8 @@ $sizes:(
         '9-12' 9px 12px,
         '0-8' 0 8px,
         '4-8' 4px 8px,
+        '5-10' 5px 10px,
+        '5-7' 5px 7px,
 );
 @each $name,$value1,$value2 in $sizes {
   .padding-#{$name} {
