fix: update rate

--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -54,6 +54,7 @@
 @import 'layout/sidebar-left';
 @import "layout/thongbao";
 @import "layout/search";
+@import "layout/rates";
 
 @import 'pages/home';
 @import 'pages/about';
