--- a/style.css
+++ b/style.css
@@ -1171,6 +1171,64 @@
 }
 
 @media (min-width: 1600px) {
+  .uk-grid-68-xl {
+    margin-left: -68px !important;
+  }
+  .uk-grid-68-xl > * {
+    padding-left: 68px !important;
+  }
+  .uk-grid-68-xl > .uk-grid-margin {
+    margin-top: 68px !important;
+  }
+}
+
+@media (min-width: 1200px) {
+  .uk-grid-68-l {
+    margin-left: -68px !important;
+  }
+  .uk-grid-68-l > * {
+    padding-left: 68px !important;
+  }
+  .uk-grid-68-l > .uk-grid-margin {
+    margin-top: 68px !important;
+  }
+}
+
+@media (min-width: 960px) {
+  .uk-grid-68-m {
+    margin-left: -68px !important;
+  }
+  .uk-grid-68-m > * {
+    padding-left: 68px !important;
+  }
+  .uk-grid-68-m > .uk-grid-margin {
+    margin-top: 68px !important;
+  }
+}
+
+@media (min-width: 640px) {
+  .uk-grid-68-s {
+    margin-left: -68px !important;
+  }
+  .uk-grid-68-s > * {
+    padding-left: 68px !important;
+  }
+  .uk-grid-68-s > .uk-grid-margin {
+    margin-top: 68px !important;
+  }
+}
+
+.uk-grid-68 {
+  margin-left: -68px;
+}
+.uk-grid-68 > * {
+  padding-left: 68px;
+}
+.uk-grid-68 > .uk-grid-margin {
+  margin-top: 68px;
+}
+
+@media (min-width: 1600px) {
   .uk-grid-70-xl {
     margin-left: -70px !important;
   }
@@ -2515,6 +2573,13 @@
   line-height: 2;
 }
 
+.row-gap-4.uk-grid-margin {
+  margin-top: 4px;
+}
+.row-gap-4 > *.uk-grid-margin {
+  margin-top: 4px;
+}
+
 .row-gap-16.uk-grid-margin {
   margin-top: 16px;
 }
@@ -3417,6 +3482,27 @@
 .search__item:nth-child(n+2) {
   margin-top: 4px;
 }
+.rates__radio:checked ~ label, .rates__radio:not(:checked) ~ label:hover, .rates__radio:not(:checked) ~ label:hover ~ label {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='44' height='44' viewBox='0 0 44 44' fill='none'%3E%3Cpath d='M22.5 8L25.6432 17.6738H35.8148L27.5858 23.6525L30.729 33.3262L22.5 27.3475L14.271 33.3262L17.4142 23.6525L9.18521 17.6738H19.3568L22.5 8Z' fill='url(%23paint0_linear_12961_82325)'/%3E%3Cdefs%3E%3ClinearGradient id='paint0_linear_12961_82325' x1='36.5' y1='80.3749' x2='-24.837' y2='65.5783' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23FFC01F'/%3E%3Cstop offset='1' stop-color='%23FFF38C'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E");
+}
+.rates__icon {
+  cursor: pointer;
+  width: 44px;
+  height: 44px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='44' height='44' viewBox='0 0 44 44' fill='none'%3E%3Cpath d='M22.5 8L25.6432 17.6738H35.8148L27.5858 23.6525L30.729 33.3262L22.5 27.3475L14.271 33.3262L17.4142 23.6525L9.18521 17.6738H19.3568L22.5 8Z' fill='%23E6E6E6'/%3E%3C/svg%3E");
+}
+.rates__icon:nth-child(n+2):not(:nth-child(2)) {
+  margin-right: 68px;
+}
+.rates__txt:before {
+  content: attr(data-txt);
+}
+
 .home__banner2__overlay {
   border-radius: var(----f1-number-20, 20px);
   background: -webkit-gradient(linear, left bottom, left top, from(rgba(34, 61, 77, 0.5)), to(rgba(34, 61, 77, 0.5)));
